# voxlets

./: .gitignore  README.md  todo.md
2D/: create_subset.m  create_train_test_split.m  define_params.m  evaluate_predictions.m  generate_filelist.m  get_predictor.m  pipeline.m  raytrace_all_masks.m  rotate_all_masks.m  rotate_and_raytrace.m  run_prediction_algorithm.m  save_images_mat_files.m  segment_and_normals.m  segment_depths.m  set_up_predictors.m  shape_dist_compute.m  shape_dist_dictionary.m  test_prediction_algorithms.m  train_gaussian_model.m  train_model.m  train_structured_model.m  view_prediction_outputs.m
2D/file_scripts/: create_subset.m  define_params.m  pipeline.m  raytrace_all_masks.m  rotate_all_masks.m  save_images_mat_files.m
2D/src/: compute_normals_script.m  display_found_transforms.m  fill_grid_from_depth.m  find_best_weighting.m  imtransform_compare.m  plot_prediction_result.m  raytrace_2d.m  rotate_mask.m  run_prediction_algorithm.m  segment_depth.m  train_model.m
2D/testing/: evaluate_predictions.m  plot_roc.m
3D/: compute_training_normals.m  computing_feature_vectors.m  create_structured_model.m  define_params_3d.m  generate_halo.m  generate_models_filelist.m  generate_shape_dist_dict.m  pipeline_3d.m  ply_to_centered_obj.m  render_training_views.m
3D/features/: make.m  normals_and_segmentation.m  normals_mex.cpp  normals_wrapper.m  segment_mex.cpp  segment_prism_mex.cpp  segment_soup_3d.m  segment_wrapper.m
3D/file_io/: read_obj_simple.m  write_obj_simple.m
3D/model_render/: R.csv  generate_halo.m  getDepthSequence.py  plot3d.m  render_likelihood_views.py  render_ply.m  render_specific_object.py  render_training_views.m  view_align_check.m
3D/plotting/: plot3d.m  plot_normals.m
common/: flipgray.m
src/: line_count.txt
src/pcl_pipeline/recogniser/: CMakeLists.txt  cvfh_pose_estimation.cpp  local_recognizer.cpp  mesh_source.h  my_crh_estimator.h  my_global_nn_recognizer_crh.cpp  my_prism_segment.cpp  notes.md  pcl_test.cpp  recognise.cpp  recognise_global.cpp  render.cpp  train_crh.cpp  vtk_test.cpp
(+869 files in other folders)
